cosmetic changes & small improvements updated dependencies, reformatted, corrected spellings, reduced warnings